--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-name: 2021 Weeks Research Symposium
-title: null
+title: [2021 Weeks Research Symposium]
+description: [Department of Geoscience, University of Wisconsin-Madison]
