--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: [2021 Weeks Research Symposium]
-description: [Department of Geoscience, University of Wisconsin-Madison]
+description: [Department of Geoscience @ University of Wisconsin-Madison]
