--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
-title: [2021 Weeks Research Symposium]
-description: [Department of Geoscience @ University of Wisconsin-Madison]
+title: 2021 Weeks Research Symposium
+description: Department of Geoscience, University of Wisconsin-Madison
+show_downloads: true
