--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-title: 2021 Weeks Research Symposium
+title: [2021 Weeks Research Symposium]
 description: Department of Geoscience, University of Wisconsin-Madison
 show_downloads: true
